--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^6.7.3",
     "morgan": "~1.9.1",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
